--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <script>
     // Konfigurace
-    const CLIENT_ID = 'YOUR_CLIENT_ID.apps.googleusercontent.com';
+    const CLIENT_ID = '562922982244-e4ci4pc7pj3tche4dat3ra6oam17ath8.apps.googleusercontent.com';
     const SCOPE = 'https://www.googleapis.com/auth/drive.appdata';
     const FILE_NAME = 'weight_records.json';
 
