--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     script-src 'self' https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4 https://accounts.google.com https://accounts.google.com/gsi https://accounts.google.com/gsi/client https://apis.google.com https://www.gstatic.com https://content.googleapis.com 'unsafe-inline';
     style-src 'self' 'unsafe-inline';
     frame-src https://accounts.google.com https://accounts.google.com/gsi https://content.googleapis.com;
-    connect-src https://www.googleapis.com https://www.gstatic.com https://content.googleapis.com;">>
+    connect-src https://www.googleapis.com https://www.gstatic.com https://content.googleapis.com;">
 
   <!-- Tailwind CSS via Browser CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4" defer></script>
